# HypnoQ

./: .gitignore  Dockerfile.koyeb  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
data/raw_data/: Daydream Therapy - Hypnotherapy FAQ.md
evaluation/: README.md  Untitled.ipynb  create_ground_truth.ipynb  eval_functions.py  evaluate_RAG.ipynb  evaluate_retrival.ipynb  ground-truth-data.csv  llm_results.csv
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/src/: entrypoint.sh  main.py
grafana/provisioning/dashboards/: ChatBot Dashboard-1727707805906.json
grafana/provisioning/datasources/: datasource.yaml
models/: Dockerfile  chatbot.ipynb  pyproject.toml  requirements.txt
models/evaluation/: chatbot_evaluation.ipynb  create_ground_truth.ipynb  eval_functions.py  evaluate_vector_serach.ipynb  ground-truth-data.csv
models/src/: entrypoint.sh  hypnoq_chain.py  main.py
models/src/analytics/: db.py  db_prep.py  generate_data.py
models/src/chains/: hypnoq_chain.py  rag.py
models/src/data_models/: models.py
models/tests/: test_hypnoq_chain.py
vector_db/: Dockerfile  requirements.txt
vector_db/src/: entrypoint.sh  ingest_documents.py
vector_db/tests/: test_doc_processing.py
vectordb_setup/: Dockerfile  pyproject.toml  test_notebook.ipynb
vectordb_setup/hypnoq_index/: index.faiss  index.pkl
vectordb_setup/src/: entrypoint.sh  ingest_documents.py
vectordb_setup/tests/: test_doc_processing.py
