[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Moris0n <146327569+Moris0n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
debugpy = "^1.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
