[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Moris0n <146327569+Moris0n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
faiss-cpu = "^1.8.0.post1"
fastembed = "^0.3.6"
groq = "^0.10.0"
langchain-groq = "^0.1.9"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
